maze.lessons.maze.island.IslandMaze.scala.error
Escaper:3: error: not found: value get
  while(get(y)>0 && estSurBiscuit()){
        ^Escaper:3: error: not found: value y
  while(get(y)>0 && estSurBiscuit()){
            ^